--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2025.1.0</spring-cloud.version>
+        <registry.username/>
+        <registry.token/>
+        <registry.url/>
+        <project.imageName>${project.name}</project.imageName>
+        <project.isPublish>true</project.isPublish>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -59,6 +64,24 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <imageName>${project.imageName}</imageName>
+                    <publish>${project.isPublish}</publish>
+                    <docker>
+                        <publishRegistry>
+                            <username>${registry.username}</username>
+                            <password>${registry.token}}</password>
+                            <url>${registry.url}</url>
+                        </publishRegistry>
+                    </docker>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-image-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
 			</plugin>
 		</plugins>
 	</build>
